[S20-130] [minor] fix: horizontal overflow

--- a/frontend/src/sass/components/_app.scss
+++ b/frontend/src/sass/components/_app.scss
@@ -10,7 +10,7 @@
     flex-grow: 1;
     display: flex;
     background: var(--color-background-app);
-    overflow: auto;
+    overflow-x: hidden;
   }
 
   &__sidebar {
